results/SVCOMP/2-shot/log-assert2-2024_03_18_23_01_59.txt
import java.util.Random;

class assert2 {
    //@ ensures \result >= 0;
    //@ ensures \result < 1000;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        //@ assert i < 1000;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result >= 0;
                 ^
/home/max/Documents/JMLGPT/tmp/assert2.java:5: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result < 1000;
                 ^
2 errors

